[project]
name = "biscripts"
description = "python code accompanying the book Binary Insights"
keywords = [
"buckling", "crane", "fenders", "impact", "reliability", "sncurves", "stability", "stormsafety", "tow", "viv", "wind"]
dynamic = ["version"]
authors = [
    { name = "Chetan Kunte", email = "me+bi@ckunte.net" }
]
maintainers = [
    { name = "Chetan Kunte", email = "me+bi@ckunte.net" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "docopt"
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.ruff]
line-length = 70